syntax = "proto2";

package cloudprober.surfacer.probestatus;

option go_package = "github.com/cloudprober/cloudprober/surfacers/probestatus/proto";

message SurfacerConf {
    // default 60s
    optional int32 resolution_sec = 1 [default = 60];

    // Number of points in each timeseries. This field dictates how far back
    // can you go up to (resolution_sec * timeseries_size). Note that higher
    // this number, more memory you'll use.
    optional int32 timeseries_size = 2 [default = 4320];

    // Max targets per probe.
    optional int32 max_targets_per_probe = 3 [default = 20];

    // ProbeStatus URL
    optional string url = 4 [default = "/probestatus"];
}
